# SkyModderAI

./: .codecov.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACTUALLY_FREE.md  ACTUAL_MARKETING.md  ADS_QUARANTINED_COMPLETE.md  AD_BUILDER_DESIGN.md  AGENT_RATIONAL.md  ALL_ERRORS_FIXED.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  AUTHENTIC_FREE_IMPLEMENTATION.md  BESPOKE_DYNAMIC_AUDIT.md  BUSINESS_IMPLEMENTATION_COMPLETE.md  BUSINESS_OVERHAUL_COMPLETE.md  BUSINESS_OVERHAUL_PLAN.md  CLEANUP_AUDIT.md  CLEANUP_REPORT_2026_02_18.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMMUNITY_BUILDS_IMPLEMENTATION.md  COMMUNITY_LINK_FIX.md  COMMUNITY_TAB_FRONT_CENTER.md  COMPLETE_FIXES_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_REMEDIATION_PLAN.md  CONSISTENCY_FIXES.md  CONSISTENCY_GUIDE.md  CONTEXT_THREADING_SUMMARY.md  CONTRIBUTING.md  DEEP_CODEBASE_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DESIGN_MANIFESTO.md  DESIGN_RATIONALE.md  DEVELOPMENT_NOTES.md  DONATION_BRANDING_UPDATE.md  Dockerfile  (+119 more)
.github/: pull_request_template.md
blueprints/: __init__.py  ad_builder.py  analysis.py  api.py  auth.py  business.py  community.py  compatibility.py  export.py  feedback.py  mod_author.py  mod_detail.py  mod_manager.py  openclaw.py  shopping.py  sponsors.py
config/: business_categories.yaml  external_links.yaml  hub_content.yaml  sponsor_charter.yaml
data/: game_versions.json  mod_database.json
docs/: AD_BUILDER_DESIGN.md  AD_BUILDER_IMPLEMENTATION.md  AD_BUILDER_PROGRESS.md  AUDIT_RECOMMENDATIONS_COMPLETE.md  BETHESDA_OPTIMIZATION.md  BUSINESS_DIRECTORY_CLARIFICATION.md  BUY_ME_MEAD.md  build.md  (+33 more)
(+207 files in other folders)
