[project]
name = "modcheck"
version = "1.0.0"
description = "AI-powered mod compatibility checker for Skyrim, Fallout, and Starfield. Paste your load order, get instant conflict detection."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ModCheck", email = "mcompchecker@gmail.com" }]
keywords = ["skyrim", "fallout", "starfield", "mod", "loot", "compatibility", "modding"]
dependencies = [
    "Flask==3.1.2",
    "Flask-Compress==1.14",
    "requests==2.32.5",
    "duckduckgo-search>=4.0.0",
    "pyyaml==6.0.3",
    "stripe==7.0.0",
    "openai>=1.0.0",
    "gunicorn==21.2.0",
    "Werkzeug==3.1.5",
    "python-dotenv==1.0.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["venv", ".venv", "data", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
